kubernetes-deployment/solr/solr.yml
---
# Source: solr/charts/zookeeper/templates/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr-zookeeper-headless
  labels:
    app: zookeeper
    chart: zookeeper-1.2.2
    release: solr
    heritage: Tiller
spec:
  clusterIP: None
  ports:
    - name: client
      port: 2181
      targetPort: client
      protocol: TCP
    - name: election
      port: 3888
      targetPort: election
      protocol: TCP
    - name: server
      port: 2888
      targetPort: server
      protocol: TCP
  selector:
    app: zookeeper
    release: solr

---
# Source: solr/charts/zookeeper/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr-zookeeper
  labels:
    app: zookeeper
    chart: zookeeper-1.2.2
    release: solr
    heritage: Tiller
  annotations:
spec:
  type: ClusterIP
  ports:
    - name: client
      port: 2181
      protocol: TCP
      targetPort: client
      
  selector:
    app: zookeeper
    release: solr

---
# Source: solr/charts/zookeeper/templates/statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: solr-zookeeper
  labels:
    app: zookeeper
    chart: zookeeper-1.2.2
    release: solr
    heritage: Tiller
    component: server
spec:
  serviceName: solr-zookeeper-headless
  replicas: 3
  selector:
    matchLabels:
      app: zookeeper
      release: solr
      component: server
  updateStrategy:
    type: OnDelete
    
  template:
    metadata:
      labels:
        app: zookeeper
        release: solr
        component: server
      annotations:
    spec:
      terminationGracePeriodSeconds: 1800
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        
      containers:

        - name: zookeeper
          image: "gcr.io/google_samples/k8szk:v3"
          imagePullPolicy: IfNotPresent
          command:
            - /bin/bash
            - -xec
            - zkGenConfig.sh && exec zkServer.sh start-foreground
          ports:
            - name: client
              containerPort: 2181
              protocol: TCP
              
            - name: election
              containerPort: 3888
              protocol: TCP
              
            - name: server
              containerPort: 2888
              protocol: TCP
              
          livenessProbe:
            exec:
              command:
              - zkOk.sh
            initialDelaySeconds: 20
            
          readinessProbe:
            exec:
              command:
              - zkOk.sh
            initialDelaySeconds: 20
            
          resources:
            {}
            
          volumeMounts:
            - name: data
              mountPath: /var/lib/zookeeper
      volumes:
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteMany"
        resources:
          requests:
            storage: "5Gi"

---
# Source: solr/templates/statefulset.yaml
---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: solr
  labels:
    app.kubernetes.io/name: solr
    app.kubernetes.io/instance: solr
    app.kubernetes.io/managed-by: Tiller
    helm.sh/chart: solr-1.2.0
    app.kubernetes.io/component: server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: "solr"
      app.kubernetes.io/instance: "solr"
      app.kubernetes.io/component: "server"
  serviceName: solr-headless
  replicas: 3
  updateStrategy:
        type: RollingUpdate
    
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "solr"
        app.kubernetes.io/instance: "solr"
        app.kubernetes.io/component: "server"
      annotations:
        {}
        
    spec:
      securityContext:
        fsGroup: 8983
        runAsUser: 8983
      affinity:
        {}
        
      terminationGracePeriodSeconds: 180
      volumes:
        - name: solr-xml
          configMap:
            name: solr-config-map
            items:
              - key: solr.xml
                path: solr.xml
      containers:
        - name: solr
          image: "solr:8.2.0"
          imagePullPolicy: IfNotPresent
          resources:
            {}
            
          ports:
            - containerPort: 8983
              name: solr-client
          livenessProbe:
            initialDelaySeconds: 45
            periodSeconds: 10
            httpGet:
              scheme: "HTTP"
              path: /solr/admin/info/system
              port: 8983
          readinessProbe:
            initialDelaySeconds: 15
            periodSeconds: 5
            httpGet:
              scheme: "HTTP"
              path: /solr/admin/info/system
              port: 8983
          volumeMounts:
            - name: solr-pvc
              mountPath: /opt/solr/server/home

  volumeClaimTemplates:
    - metadata:
        name: solr-pvc
        annotations:
          pv.beta.kubernetes.io/gid: "8983"
      spec:
        accessModes:
          - ReadWriteMany
          
        resources:
          requests:
            storage: 20Gi

---
# Source: solr/templates/solr-xml-configmap.yaml
---
# Source: solr/templates/poddisruptionbudget.yaml
---
# Source: solr/templates/service-headless.yaml
---

apiVersion: "v1"
kind: "Service"
metadata:
  name: "solr-headless"
  labels:
    app.kubernetes.io/name: solr
    app.kubernetes.io/instance: solr
    app.kubernetes.io/managed-by: Tiller
    helm.sh/chart: solr-1.2.0
spec:
  clusterIP: "None"
  ports:
    - port: 8983
      name: "solr-headless"
  selector:
    app.kubernetes.io/name: "solr"
    app.kubernetes.io/instance: "solr"
    app.kubernetes.io/component: "server"

---
# Source: solr/templates/service.yaml
---

apiVersion: "v1"
kind: "Service"
metadata:
  name: "solr-svc"
  labels:
    app.kubernetes.io/name: solr
    app.kubernetes.io/instance: solr
    app.kubernetes.io/managed-by: Tiller
    helm.sh/chart: solr-1.2.0
  annotations:
    {}
    
spec:
  type: "NodePort"
  ports:
    - port: 8983
      nodePort: 30326
      name: "solr-client"
  selector:
    app.kubernetes.io/instance: "solr"
    app.kubernetes.io/instance: "solr"
    app.kubernetes.io/component: "server"

---
# Source: solr/charts/zookeeper/templates/config-jmx-exporter.yaml


---
# Source: solr/charts/zookeeper/templates/job-chroots.yaml

---
# Source: solr/templates/exporter-deployment.yaml
