kubernetes-deployment/solr/solr-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: solr-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /solr-cluster(/|$)(.*)
        backend:
          serviceName: solr-svc
          servicePort: 8983
